// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stellar Network Health & RPC Diagnostics Dashboard (#1064) 1. Healthy State: renders healthy badges and operational metrics for Horizon and Soroban 1`] = `
<div>
  <div
    class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm space-y-6"
    data-testid="stellar-network-health-dashboard"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 border-b border-gray-100 pb-4"
    >
      <div>
        <div
          class="flex items-center gap-3"
        >
          <h2
            class="text-lg font-bold text-gray-900"
          >
            Stellar Network Health & RPC Diagnostics
          </h2>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800"
          >
            ● Healthy
          </span>
        </div>
        <p
          class="text-sm text-gray-500 mt-1"
        >
          Tracks upstream Stellar Horizon and Soroban RPC performance to distinguish network outages from app failures (#1064).
        </p>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="horizon-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Horizon Node
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://horizon-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800"
          >
            ● Healthy
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              120
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              240
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-green-600"
            >
              0
              %
            </span>
          </div>
        </div>
      </div>
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="soroban-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Soroban RPC
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://soroban-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800"
          >
            ● Healthy
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              280
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              450
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-green-600"
            >
              0
              %
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stellar Network Health & RPC Diagnostics Dashboard (#1064) 2. Degraded State: renders degraded warning banner and high latency metrics 1`] = `
<div>
  <div
    class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm space-y-6"
    data-testid="stellar-network-health-dashboard"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 border-b border-gray-100 pb-4"
    >
      <div>
        <div
          class="flex items-center gap-3"
        >
          <h2
            class="text-lg font-bold text-gray-900"
          >
            Stellar Network Health & RPC Diagnostics
          </h2>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800"
          >
            ▲ Degraded
          </span>
        </div>
        <p
          class="text-sm text-gray-500 mt-1"
        >
          Tracks upstream Stellar Horizon and Soroban RPC performance to distinguish network outages from app failures (#1064).
        </p>
      </div>
    </div>
    <div
      class="p-4 rounded-md text-sm bg-yellow-50 text-yellow-800 border border-yellow-200"
      data-testid="health-outage-banner"
    >
      <strong>
        Notice: 
      </strong>
      Upstream Stellar network latency or errors may impact reward payouts and wallet synchronization.
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="horizon-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Horizon Node
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://horizon-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-yellow-100 text-yellow-800"
          >
            ▲ Degraded
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              1450
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              2900
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-red-600"
            >
              8.5
              %
            </span>
          </div>
        </div>
        <p
          class="text-xs text-red-600 bg-red-50 p-2 rounded"
        >
          Last Error: 
          HTTP 504 Gateway Timeout
        </p>
      </div>
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="soroban-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Soroban RPC
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://soroban-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800"
          >
            ● Healthy
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              310
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              520
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-green-600"
            >
              0
              %
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stellar Network Health & RPC Diagnostics Dashboard (#1064) 3. Major Outage State: renders critical outage banner and error rate indicators 1`] = `
<div>
  <div
    class="p-6 bg-white border border-gray-200 rounded-lg shadow-sm space-y-6"
    data-testid="stellar-network-health-dashboard"
  >
    <div
      class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 border-b border-gray-100 pb-4"
    >
      <div>
        <div
          class="flex items-center gap-3"
        >
          <h2
            class="text-lg font-bold text-gray-900"
          >
            Stellar Network Health & RPC Diagnostics
          </h2>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800"
          >
            ✖ Major Outage
          </span>
        </div>
        <p
          class="text-sm text-gray-500 mt-1"
        >
          Tracks upstream Stellar Horizon and Soroban RPC performance to distinguish network outages from app failures (#1064).
        </p>
      </div>
    </div>
    <div
      class="p-4 rounded-md text-sm bg-red-50 text-red-800 border border-red-200"
      data-testid="health-outage-banner"
    >
      <strong>
        Notice: 
      </strong>
      Upstream Stellar network latency or errors may impact reward payouts and wallet synchronization.
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 gap-4"
    >
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="horizon-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Horizon Node
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://horizon-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800"
          >
            ✖ Major Outage
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              5200
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              8000
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-red-600"
            >
              42
              %
            </span>
          </div>
        </div>
        <p
          class="text-xs text-red-600 bg-red-50 p-2 rounded"
        >
          Last Error: 
          Connection refused
        </p>
      </div>
      <div
        class="p-4 border border-gray-200 rounded-md bg-gray-50/50 space-y-3"
        data-testid="soroban-health-card"
      >
        <div
          class="flex items-center justify-between"
        >
          <div
            class="flex items-center gap-2"
          >
            <span
              class="font-semibold text-gray-900"
            >
              Soroban RPC
            </span>
            <span
              class="text-xs text-gray-400 font-mono truncate max-w-[150px]"
            >
              https://soroban-testnet.stellar.org
            </span>
          </div>
          <span
            class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-red-100 text-red-800"
          >
            ✖ Major Outage
          </span>
        </div>
        <div
          class="grid grid-cols-3 gap-2 pt-2 border-t border-gray-100 text-center"
        >
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Avg Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              6100
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              p95 Latency
            </span>
            <span
              class="text-sm font-semibold text-gray-900"
            >
              9500
               ms
            </span>
          </div>
          <div
            class="bg-white p-2 rounded border border-gray-100"
          >
            <span
              class="block text-xs text-gray-500"
            >
              Error Rate
            </span>
            <span
              class="text-sm font-semibold text-red-600"
            >
              55
              %
            </span>
          </div>
        </div>
        <p
          class="text-xs text-red-600 bg-red-50 p-2 rounded"
        >
          Last Error: 
          Endpoint unavailable
        </p>
      </div>
    </div>
  </div>
</div>
`;
